Potential fix for overscroll navigation on iOS Chrome.

--- a/css/stroll.css
+++ b/css/stroll.css
@@ -1,4 +1,5 @@
 html, body {
+    height: 100%;
     position: fixed;
     overscroll-behavior: none;
     overflow: hidden;
